# calibration

./: CMakeLists.txt
include/: calibration.h  loader.h  pclviewer.h  tools.h
pattern/: model.txt
pictures/: intrinsics.txt
src/: calibTest.cpp  calibration.cpp  jpg2pgm.cpp  loader.cpp  main.cpp  pclviewer.cpp  pclviewer.ui  pclviewer.ui.autosave  tools.cpp  toolsApp.cpp
test/: H.pgm  HH.pgm  Harris.pgm  binary.pgm  c.ppm  chessFilter.ppm  edge.pgm  edges.pgm  edges_2.pgm  edges_3.pgm  filterLine.ppm  finalLine.ppm  frame.pgm  frame2.pgm  frame3.pgm  frame4.pgm  frame5.pgm  frame6.pgm  frame7.pgm  line.ppm  lines (copy).ppm  lines.ppm  lmaximum.pgm  res.ppm  res2.ppm  result (copy).pgm  result.pgm  result2.pgm  tempLine.ppm  tophat.pgm
